Fix alignments

--- a/src/app/components/sharing/sharing.component.sass
+++ b/src/app/components/sharing/sharing.component.sass
@@ -184,3 +184,5 @@ div.unshare-revoke-buttons *
     right: 0
     top: 0
     z-index: -1
+    width: 43px
+    justify-items: center
